--- a/playit2019/package.json
+++ b/playit2019/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^5.13.1",
+    "mobx-react": "^6.1.3",
+    "mobx-react-devtools": "^6.1.1",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
@@ -11,7 +14,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "save-dev": "^2.0.0",
-    "startbootstrap-agency": "^5.2.2"
+    "startbootstrap-agency": "^5.2.2",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
