--- a/playit2019/package.json
+++ b/playit2019/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mobx": "^5.13.1",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "babel-polyfill": "^6.26.0",
+    "mobx": "^4.14.0",
     "mobx-react": "^6.1.3",
     "mobx-react-devtools": "^6.1.1",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
+    "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
