--- a/playit2019/package.json
+++ b/playit2019/package.json
@@ -13,6 +13,7 @@
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.9.0",
+    "react-facebook": "^8.0.4",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
